coding for answering questions is complete

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <section>
         <h1>Music Theory Quiz</h1>
-        <h3 id="countdownTimer"></h3>
+        <h3 id="countdownTimer">(Timer not begun)</h3>
+        <h3 id="penaltyBox"></h3>
     </section>
 
     <section>
@@ -21,10 +22,10 @@
     <section class="mainQuizBody">
         <ol>
             <p id="questionBox"></p>
-            <button id="answerButton"></button>
-            <button id="answerButton"></button>
-            <button id="answerButton"></button>
-            <button id="answerButton"></button>
+            <button id="answerButton1"></button>
+            <button id="answerButton2"></button>
+            <button id="answerButton3"></button>
+            <button id="answerButton4"></button>
         </ol>
     </section>
 
