--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Document</title>
+    <title>Music Theory Quiz</title>
 </head>
 
 <body>
     <section>
         <h1>Music Theory Quiz</h1>
         <h3 id="countdownTimer">(Timer not begun)</h3>
-        <h3 id="penaltyBox"></h3>
+
     </section>
 
     <section>
@@ -27,6 +27,9 @@
             <button id="answerButton3"></button>
             <button id="answerButton4"></button>
         </ol>
+        <section>       
+            <h3 id="penaltyBox"></h3>
+        </section>
     </section>
 
     <script src="./assets/javascript/script.js"></script>
